--- a/homeassistant/components/redfish/translations/en.json
+++ b/homeassistant/components/redfish/translations/en.json
@@ -1,17 +1,17 @@
 {
   "config": {
-    "error": {
-      "cannot_connect": "[%key:common::config_flow::error::cannot_connect%]"
-    },
     "abort": {
-      "already_configured": "[%key:common::config_flow::abort::already_configured_device%]"
+      "already_configured": "Device is already configured"
+    },
+    "error": {
+      "cannot_connect": "Failed to connect"
     },
     "step": {
       "user": {
         "data": {
-          "url": "[%key:common::config_flow::data::url%]",
-          "username": "[%key:common::config_flow::data::username%]",
-          "password": "[%key:common::config_flow::data::password%]"
+          "password": "Password",
+          "url": "URL",
+          "username": "Username"
         },
         "description": "Connect to a Redfish API endpoint.",
         "title": "Connect"
